--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <version.java>1.7</version.java>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -17,7 +17,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.3</version>
                 <configuration>
                     <source>${version.java}</source>
                     <target>${version.java}</target>
@@ -48,7 +48,11 @@
             <id>JDK_1.7</id>
             <activation>
                 <jdk>1.7</jdk>
+                <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <version.java>1.7</version.java>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>com.oracle</groupId>
@@ -64,6 +68,9 @@
             <activation>
                 <jdk>1.8</jdk>
             </activation>
+            <properties>
+                <version.java>1.8</version.java>
+            </properties>
         </profile>
     </profiles>
 
