--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <plugin>
-                <!-- Build an executable JAR -->
+           <!-- <plugin>
+                &lt;!&ndash; Build an executable JAR &ndash;&gt;
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -39,7 +39,7 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
