--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pt.gov.dgarq.roda-in</groupId>
     <artifactId>roda-in</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-alpha.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,8 +24,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-           <!-- <plugin>
-                &lt;!&ndash; Build an executable JAR &ndash;&gt;
+           <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -39,7 +38,7 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
