Made the SIP id a text field so it can be selected in the interface

--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -2,4 +2,4 @@ schema.cell.selected = -fx-background-color: powderblue
 schema.cell.exited = -fx-background-color: transparent
 schema.cell.text-color = -fx-text-fill: grey
 
-source.cell.mapped = -fx-fill: darkgray
+source.cell.mapped = -fx-text-fill: darkgray
