--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.java>1.8</version.java>
+        <projectLocalRepository>${project.basedir}/repository</projectLocalRepository>
     </properties>
 
     <repositories>
@@ -20,6 +21,18 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+        </repository>
+        <repository>
+            <id>vendorDependencies</id>
+            <name>Vendor dependencies</name>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <url>file://${projectLocalRepository}/</url>
         </repository>
     </repositories>
 
@@ -124,6 +137,11 @@
             <artifactId>testfx-junit</artifactId>
             <version>4.0.1-alpha</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.roda-project</groupId>
+            <artifactId>commons-ip</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
