--- a/pom.xml
+++ b/pom.xml
@@ -138,11 +138,11 @@
             <version>4.0.1-alpha</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.roda-project</groupId>
-            <artifactId>commons-ip</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.roda-project</groupId>-->
+        <!--<artifactId>commons-ip</artifactId>-->
+        <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
