--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,6 @@
 
     <repositories>
         <repository>
-            <id>maven-central-repo</id>
-            <url>http://repo1.maven.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
             <id>vendorDependencies</id>
             <name>Vendor dependencies</name>
             <releases>
@@ -33,6 +26,13 @@
                 <enabled>true</enabled>
             </snapshots>
             <url>file://${projectLocalRepository}/</url>
+        </repository>
+        <repository>
+            <id>maven-central-repo</id>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -138,11 +138,11 @@
             <version>4.0.1-alpha</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.roda-project</groupId>-->
-        <!--<artifactId>commons-ip</artifactId>-->
-        <!--<version>1.0.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.roda-project</groupId>
+            <artifactId>commons-ip</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
