--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -31,4 +31,4 @@ metadata.template.icon = icons/template.png
 metadata.template.description = Lorem ipsum dolor sit amet, at his legendos constituam, usu ei deserunt persequeris, dicta verear theophrastus mea ea. Vis debet iriure in, eum ne veri suscipit singulis. Laudem tractatos nec cu. Ei laudem putant voluptatibus eum, cu quo saperet veritus comprehensam, eum te mazim ceteros. Et vel suas doctus nonumes, pro suas sonet corrumpit in.
 
 metadata.template.ead = ead_template.xml
-metadata.template.dcmes = dcmes_template.xml
+metadata.template.dcmes = dc.xml
