--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,18 @@
             <version>4.9.0</version>
         </dependency>
         <dependency>
+            <groupId>org.roda-project</groupId>
+            <artifactId>commons-ip</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <!-- Tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
             <version>4.0.1-alpha</version>
@@ -137,11 +149,6 @@
             <artifactId>testfx-junit</artifactId>
             <version>4.0.1-alpha</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.roda-project</groupId>
-            <artifactId>commons-ip</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
