--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-           <plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <finalName>rodain-app-${project.version}</finalName>
@@ -74,11 +74,17 @@
                        </goals>
                    </execution>
                </executions>
-           </plugin>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>2.17</version>
+                <configuration>
+                    <reuseForks>false</reuseForks>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${java.home}/lib/ext/jfxrt.jar</additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
             </plugin>
         </plugins>
     </build>
