--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 sudo: false
 before_install:
   - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- +extension RANDR :99 -ac -screen 0 1280x1024x16"
 jdk:
   - oraclejdk8
