--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,12 @@
             <version>4.0.1-alpha</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>1.8.0_20</version>
+        </dependency>
+
     </dependencies>
 
 </project>
