--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -1,1 +1,10 @@
 source.cell.mapped = -fx-text-fill: darkgray
+
+association.singleSip.icon = icons/singleSip.png
+association.sipSelection.icon = icons/sipPerSelection.png
+association.sipPerFile.icon = icons/sipPerFile.png
+association.sipPerFolder.icon = icons/sipPerFolder.png
+metadata.singleFile.icon = icons/singleFile.png
+metadata.sameFolder.icon = icons/sameFolder.png
+metadata.diffFolder.icon = icons/diffFolder.png
+metadata.template.icon = icons/template.png
