--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,5 +1,7 @@
-metadata.templates = ead,dcmes
-metadata.template.ead = ead_template.xml
-metadata.template.dcmes = dc.xml
+metadata.templates = ead,dc
+metadata.template.ead.file = ead_template.xml
+metadata.template.ead.title = EAD
+metadata.template.dc.file = dc.xml
+metadata.template.dc.title = Dublin Core
 
 app.language = pt
