--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -5,3 +5,6 @@ metadata.template.dc.file = dc.xml
 metadata.template.dc.title = Dublin Core
 
 app.language = pt
+# Regular expressions separated by ',' to ignore files.
+# These files won't appear in the explorer and won't be included in the SIPs
+app.ignoredFiles = Thumbs.db,DS_STORE,\\..*
