--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -7,4 +7,4 @@ metadata.template.dc.title = Dublin Core
 app.language = pt
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
-app.ignoredFiles = Thumbs.db,DS_STORE,\\..*
+app.ignoredFiles = Thumbs.db,\\.DS_STORE,\\..*
