Fixes #71. Added template version support. Updated commons-ip jar. Minor fixes

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,10 +1,12 @@
 metadata.templates = ead,dc
 metadata.template.ead.file = ead_template.xml
 metadata.template.ead.title = EAD
+metadata.template.ead.version = 2002
 metadata.template.dc.file = dc.xml
 metadata.template.dc.title = Dublin Core
+metadata.template.dc.version = SimpleDC20021212
 
 app.language = pt
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
-app.ignoredFiles = Thumbs.db,\\.DS_STORE,\\..*
+app.ignoredFiles = Thumbs.db,\\.DS_Store,\\..*
