Tried to fix travis error build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
-sudo: false
+sudo: required
+before_script:
+  - sudo apt-get update
+  - sudo apt-get install libc6:i386 libstdc++6:i386
 install: #ignore tests
   - true
 script:
