using default locale, allowing to force in configuration, setting default to English, fixes #73

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -6,7 +6,9 @@ metadata.template.dc.file = dc.xml
 metadata.template.dc.title = Dublin Core
 metadata.template.dc.version = SimpleDC20021212
 
-app.language = pt
+# Force a locale, using the JVM default locale if not defined here
+# app.language = en
+
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
 app.ignoredFiles = Thumbs.db,\\.DS_Store,\\..*
