--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
             <artifactId>commons-ip</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.samskivert</groupId>
+            <artifactId>jmustache</artifactId>
+            <version>1.12</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>junit</groupId>
