--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ sudo: required
 before_script:
   - sudo apt-get update
   - sudo apt-get install libc6:i386 libstdc++6:i386
-install: #ignore tests
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+install:
   - true
 script:
-  - mvn clean install -DskipTests
+  - mvn clean install #-DskipTests
 jdk:
   - oraclejdk8
