Redesigned the scheme pane help panel and added way to create SIPs without a classification scheme

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -17,6 +17,7 @@ ignore=Ignore
 load=Load
 remove=Remove
 start=Start
+root=Root
 
 CreationModalPreparation.choose=Choose...
 CreationModalPreparation.creatingSips=Creating SIPs
@@ -86,11 +87,12 @@ RuleModalRemoving.title=Removing SIPs
 SchemaNode.items.format=%s  (%d items)
 SchemaNode.items.formatSimple=\  (%d items)
 SchemaPane.add=Add level
-SchemaPane.help.title=Load your\nclassification scheme
+SchemaPane.help.title=Drop files/directories here
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove level
 SchemaPane.title=Classification Scheme
-SchemaPane.create=create
+SchemaPane.create=Create a new classification scheme
+SchemaPane.load=Load a classification scheme
 SchemaPane.or=or
 
 SimpleSipCreator.copyingData=Copying the SIP's data
