Improved SIP removal feedback

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -81,7 +81,7 @@ RuleModalPane.metadataMethod=Choose the metadata method
 RuleModalProcessing.createdPreviews=Created %d SIP previews
 RuleModalProcessing.creatingPreview=Creating SIP previews
 RuleModalProcessing.processedDirsFiles=Processed %d directories and %d files
-RuleModalRemoving.removedFormat=Removed %d SIPs (%d%%)
+RuleModalRemoving.removedFormat=Removed %d%% of SIPs
 RuleModalRemoving.title=Removing SIPs
 
 SchemaNode.items.format=%s  (%d items)
