Modification to the en language file

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -91,7 +91,7 @@ SchemaPane.help.title=Drop files/directories here
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove level
 SchemaPane.title=Classification Scheme
-SchemaPane.create=Create a new classification scheme
+SchemaPane.create=Create a classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or
 
