Changed the scheme pane help panel back

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -87,11 +87,11 @@ RuleModalRemoving.title=Removing SIPs
 SchemaNode.items.format=%s  (%d items)
 SchemaNode.items.formatSimple=\  (%d items)
 SchemaPane.add=Add level
-SchemaPane.help.title=Drop files/directories here
+SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove level
 SchemaPane.title=Classification Scheme
-SchemaPane.create=Create a classification scheme
+SchemaPane.create=create a classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or
 
