--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             <artifactId>jmustache</artifactId>
             <version>1.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.10</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>junit</groupId>
