--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -128,5 +128,6 @@ metadata.diffFolder.description = Use this option to select one directory where 
 metadata.template.title = Create new metadata from a template
 metadata.template.description = Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
 export=Export
+SchemaPane.dragHelp=Drop files/directories here
 
 
