Updated commons-ip lib. Opens a dialog to confirm the removal of a scheme level with SIPs.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -129,5 +129,7 @@ metadata.template.title = Create new metadata from a template
 metadata.template.description = Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
 export=Export
 SchemaPane.dragHelp=Drop files/directories here
+SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
+SchemaPane.confirmRemove.content=This will remove %d SIPs.
 
 
