--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
         <dependency>
             <groupId>org.roda-project</groupId>
             <artifactId>commons-ip</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-alpha1</version>
         </dependency>
         <dependency>
             <groupId>com.samskivert</groupId>
