Asks the user to confirm the creation/loading of a classification scheme because the progress will be lost

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -131,5 +131,7 @@ export=Export
 SchemaPane.dragHelp=Drop files/directories here
 SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
 SchemaPane.confirmRemove.content=This will remove %d SIPs.
+SchemaPane.confirmNewScheme.header=Are you sure you want a new classification scheme?
+SchemaPane.confirmNewScheme.content=All progress will be lost.
 
 
