Improved the texts of the dialogs

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -131,7 +131,9 @@ export=Export
 SchemaPane.dragHelp=Drop files/directories here
 SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
 SchemaPane.confirmRemove.content=This will remove %d SIPs.
-SchemaPane.confirmNewScheme.header=Are you sure you want a new classification scheme?
+SchemaPane.confirmNewScheme.header=Are you sure you want to remove the current classification scheme?
 SchemaPane.confirmNewScheme.content=All progress will be lost.
+SchemaPane.confirmNewScheme.title=Confirm new classification scheme
+SchemaPane.confirmRemove.title=Confirm removal of level
 
 
