Updated commons-ip version to alpha5. Fixed #79.

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,7 +1,10 @@
-metadata.templates = ead,dc
+metadata.templates = ead,ead3,dc
 metadata.template.ead.file = ead_template.xml
 metadata.template.ead.title = EAD
 metadata.template.ead.version = 2002
+metadata.template.ead3.file = ead3.xml
+metadata.template.ead3.title = EAD3
+metadata.template.ead3.version = 1.0
 metadata.template.dc.file = dc.xml
 metadata.template.dc.title = Dublin Core
 metadata.template.dc.version = SimpleDC20021212
