Improved feedback of the EARK SIP export process

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -135,5 +135,6 @@ SchemaPane.confirmNewScheme.header=Are you sure you want to remove the current c
 SchemaPane.confirmNewScheme.content=All progress will be lost.
 SchemaPane.confirmNewScheme.title=Confirm new classification scheme
 SchemaPane.confirmRemove.title=Confirm removal of level
+CreationModalProcessing.eark.progress=Added %d of %d files to the zip
 
 
