Fixed size of textarea of the export alert. Fixed #83. Other bug fixes.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -144,6 +144,7 @@ CreationModalProcessing.alert.title=Exporting error
 CreationModalProcessing.alert.content=Check the details for more information about the error.
 CreationModalProcessing.alert.header=The SIP "%s" could not be exported due to an error
 CreationModalProcessing.alert.stacktrace=The exception stacktrace was\:
+CreationModalProcessing.representation=Processing representation
 
 
 
