--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -1,5 +1,5 @@
 source.cell.mapped = -fx-text-fill: darkgray
-export.alert = -fx-max-width:600px; -fx-max-height: 400px; -fx-pref-width: 600px; -fx-pref-height: 300px;
+export.alert = -fx-max-height: 400px; -fx-pref-width: 600px; -fx-pref-height: 300px;
 
 association.singleSip.icon = icons/singleSip.png
 association.sipSelection.icon = icons/sipPerSelection.png
