Fixes #83 (for real this time). Shows simplified message when an export error occurs. Fixed bug when creating SIPs with the "One SIP per file" option.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -141,10 +141,10 @@ Main.reset=Reset application
 Main.confirmReset.header=Are you sure you want to reset the application?
 Main.confirmReset.content=All progress will be lost.
 CreationModalProcessing.alert.title=Exporting error
-CreationModalProcessing.alert.content=Check the details for more information about the error.
 CreationModalProcessing.alert.header=The SIP "%s" could not be exported due to an error
 CreationModalProcessing.alert.stacktrace=The exception stacktrace was\:
 CreationModalProcessing.representation=Processing representation
+CreationModalProcessing.cause=Cause
 
 
 
