--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: java
-sudo: required
+sudo: false
 before_script:
   - sudo apt-get update
-  - sudo apt-get install libc6:i386 libstdc++6:i386
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
 install:
   - true
 script:
