Fixes to the interface and messages

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -137,8 +137,8 @@ SchemaPane.confirmNewScheme.title=Confirm new classification scheme
 SchemaPane.confirmRemove.title=Confirm removal of level
 CreationModalProcessing.eark.progress=Added %d of %d files to the zip
 done=Done
-Main.reset=Reset application
-Main.confirmReset.header=Are you sure you want to reset the application?
+Main.reset=New project
+Main.confirmReset.header=Are you sure you want to create a new project?
 Main.confirmReset.content=All progress will be lost.
 CreationModalProcessing.alert.title=Exporting error
 CreationModalProcessing.alert.header=The SIP "%s" could not be exported due to an error
