Fixes to messages. Loads metadata values from xpath to use in the metadata form.

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,5 +1,5 @@
 metadata.templates = ead,dc
-metadata.template.ead.file = ead_template.xml
+metadata.template.ead.file = ead.xml
 metadata.template.ead.title = EAD
 metadata.template.ead.version = 2002
 metadata.template.dc.file = dc.xml
