--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -86,10 +86,10 @@ RuleModalRemoving.title=Removing SIPs
 
 SchemaNode.items.format=%s  (%d items)
 SchemaNode.items.formatSimple=\  (%d items)
-SchemaPane.add=Add level
+SchemaPane.add=Add
 SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
-SchemaPane.remove=Remove level
+SchemaPane.remove=Remove
 SchemaPane.title=Classification Scheme
 SchemaPane.create=create a classification scheme
 SchemaPane.load=Load a classification scheme
