--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.roda</groupId>
     <artifactId>rodain</artifactId>
-    <version>1.0.0-beta.2.1</version>
+    <version>2.0.0-alpha.2.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,8 +100,8 @@
                                 <txtFileVersion>1.0.0.0</txtFileVersion>
                                 <fileDescription>Desc</fileDescription>
                                 <copyright>C</copyright>
-                                <productVersion>0.2.1.3</productVersion>
-                                <txtProductVersion>0.2.1.3</txtProductVersion>
+                                <productVersion>2.0.0.3</productVersion>
+                                <txtProductVersion>2.0.0.3</txtProductVersion>
                                 <productName>RODA-in</productName>
                                 <internalName>RODA-in</internalName>
                                 <originalFilename>rodain-app-${project.version}.exe</originalFilename>
@@ -208,6 +208,11 @@
             <groupId>com.samskivert</groupId>
             <artifactId>jmustache</artifactId>
             <version>1.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.6.10</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.controlsfx</groupId>-->
