--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -145,6 +145,11 @@ CreationModalProcessing.alert.header=The SIP "%s" could not be exported due to a
 CreationModalProcessing.alert.stacktrace=The exception stacktrace was\:
 CreationModalProcessing.representation=Processing representation
 CreationModalProcessing.cause=Cause
+metadataValue.id=ID
+metadataValue.title=Title
+metadataValue.repcode=Repository Code
+metadataValue.date=Date
+Main.classScheme=Classification Scheme
 
 
 
