--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -2,9 +2,11 @@ metadata.templates = ead,dc
 metadata.template.ead.file = ead.xml
 metadata.template.ead.title = EAD
 metadata.template.ead.version = 2002
+metadata.template.ead.schema=ead.xsd
 metadata.template.dc.file = dc.xml
 metadata.template.dc.title = Dublin Core
 metadata.template.dc.version = SimpleDC20021212
+metadata.template.dc.schema=dc.xsd
 
 # Force a locale, using the JVM default locale if not defined here
 # app.language = en
