Better properties handling

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -14,3 +14,6 @@ metadata.template.dc.schema=dc.xsd
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
 app.ignoredFiles = Thumbs.db,\\.DS_Store,\\..*
+
+#nova linha
+banana.pera = maca
