--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,12 @@
             <artifactId>richtextfx</artifactId>
             <version>0.6.10</version>
         </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>org.controlsfx</groupId>-->
             <!--<artifactId>controlsfx</artifactId>-->
