Fixed #88. Added option to change language in the menu.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -150,6 +150,10 @@ metadataValue.title=Title
 metadataValue.repcode=Repository Code
 metadataValue.date=Date
 Main.classScheme=Classification Scheme
+Main.language=Language
+Main.updateLang.title=Update language
+Main.updateLang.header=The language has been updated
+Main.updateLang.content=Restart the application to see the changes
 
 
 
