Improved the way the metadavaValues are created. Added a datePicker and description level selector to the metadata form. Added a button to save the metadata.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -154,6 +154,7 @@ Main.language=Language
 Main.updateLang.title=Update language
 Main.updateLang.header=The language has been updated
 Main.updateLang.content=Restart the application to see the changes
+metadataValue.level=Level
 
 
 
