--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,11 @@
             <version>0.14</version>
         </dependency>
         <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-core</artifactId>
+            <version>2.0.0-alpha-04</version>
+        </dependency>
+        <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.7.5.201505241946</version>
