--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.roda</groupId>
     <artifactId>rodain</artifactId>
-    <version>2.0.0-alpha.2.2</version>
+    <version>2.0.0-alpha.2.3</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -224,12 +224,11 @@
             <artifactId>commons-configuration</artifactId>
             <version>1.10</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.controlsfx</groupId>-->
-            <!--<artifactId>controlsfx</artifactId>-->
-            <!--<version>8.40.10</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.10</version>
+        </dependency>
         <!-- Tests -->
         <dependency>
             <groupId>junit</groupId>
