Added support for a few new template replaceable values. Updated templates.

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,8 +1,8 @@
 metadata.templates = ead,ead3,dc
-metadata.template.ead.file = ead.xml
+metadata.template.ead.file = ead2002.xml
 metadata.template.ead.title = EAD
 metadata.template.ead.version = 2002
-metadata.template.ead.schema=ead.xsd
+metadata.template.ead.schema=ead2002.xsd
 metadata.template.ead3.file = ead3.xml
 metadata.template.ead3.title = EAD3
 metadata.template.ead3.version = 1.0
