--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -155,6 +155,11 @@ Main.updateLang.title=Update language
 Main.updateLang.header=The language has been updated
 Main.updateLang.content=Restart the application to see the changes
 metadataValue.level=Level
+metadataValue.description=Description
+metadataValue.rights=Rights
+metadataValue.language=Language
+metadataValue.producer=Producer
+metadataValue.creator=Creator
 
 
 
