The XML editor now paints the text as the user writes it. Removed invalid description levels.

--- a/src/main/resources/properties/roda-description-levels-hierarchy.properties
+++ b/src/main/resources/properties/roda-description-levels-hierarchy.properties
@@ -2,7 +2,7 @@ roots=fonds
 representations=file,item
 
 # this information doesn't translate description level hierarchy, it's just to be for presentation purposes (e.g. advanced search)
-levels_ordered=fonds,subfonds,class,subclass,series,subseries,file,item
+levels_ordered=fonds,subfonds,series,subseries,file,item
 
 level.fonds = subfonds, series ,class, file, item
 level.subfonds = subfonds, series, class, file, item
