Minor fixes. Updated the tests.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -52,16 +52,16 @@ InspectionPane.rules=Rules
 
 LoadingPane.createAssociation=Create association to
 
-Main.createCS = Create classification scheme
+Main.createCS = Create
 Main.edit=Edit
-Main.exportCS=Export classification scheme
+Main.exportCS=Export
 Main.exportSips=Export SIPs
 Main.file=File
 Main.hideFiles=Hide Files
 Main.hideIgnored=Hide ignored
 Main.hideMapped=Hide mapped
 Main.ignoreItems=Ignore item(s)
-Main.loadCS=Load classification scheme
+Main.loadCS=Load
 Main.openFolder=Open folder
 Main.quit=Quit
 Main.showFiles=Show files
