--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -62,7 +62,7 @@ Main.hideIgnored=Hide ignored
 Main.hideMapped=Hide mapped
 Main.ignoreItems=Ignore item(s)
 Main.loadCS=Load
-Main.openFolder=Open folder
+Main.addFolder=Add folder
 Main.quit=Quit
 Main.showFiles=Show files
 Main.showIgnored=Show Ignored
@@ -160,6 +160,7 @@ metadataValue.rights=Rights
 metadataValue.language=Language
 metadataValue.producer=Producer
 metadataValue.creator=Creator
+FileExplorerPane.removeFolder=Remove folder
 
 
 
