Fixed metadata form interface bug. Fixed maximize issue when using MacOs.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -161,6 +161,7 @@ metadataValue.language=Language
 metadataValue.producer=Producer
 metadataValue.creator=Creator
 FileExplorerPane.removeFolder=Remove folder
+data=Data
 
 
 
