WIP Add representations to SipPreview. Drag'n'Drop content when inspecting SIP. WIP

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -52,7 +52,7 @@ InspectionPane.rules=Rules
 
 LoadingPane.createAssociation=Create association to
 
-Main.createCS = Create
+Main.createCS = New
 Main.edit=Edit
 Main.exportCS=Export
 Main.exportSips=Export SIPs
