Added "Add representation" and "Remove representation" buttons

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -162,6 +162,8 @@ metadataValue.producer=Producer
 metadataValue.creator=Creator
 FileExplorerPane.removeFolder=Remove folder
 data=Data
+InspectionPane.addRepresentation=Add representation
+InspectionPane.removeRepresentation=Remove representation
 
 
 
