Added SIP support for documentation and a way of adding it

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -164,6 +164,7 @@ FileExplorerPane.removeFolder=Remove folder
 data=Data
 InspectionPane.addRepresentation=Add representation
 InspectionPane.removeRepresentation=Remove representation
+documentation=Documentation
 
 
 
