Added help panel to the SIP documentation. Started implementing way of removing documentation (WIP)

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -165,6 +165,8 @@ data=Data
 InspectionPane.addRepresentation=Add representation
 InspectionPane.removeRepresentation=Remove representation
 documentation=Documentation
+InspectionPane.docsHelp.title=Drop files/folders here\nto add documentation
+InspectionPane.onDropDocs=Add documentation
 
 
 
