--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -4,7 +4,7 @@ metadata.template.ead.title = EAD
 metadata.template.ead.version = 2002
 metadata.template.ead.schema=ead2002.xsd
 metadata.template.ead3.file = ead3.xml
-metadata.template.ead3.title = EAD3
+metadata.template.ead3.title = EAD
 metadata.template.ead3.version = 3
 metadata.template.ead3.schema=ead3.xsd
 metadata.template.dc.file = dc.xml
