Added support for multiple item selection in the SIP documentation and data trees. Added documentation to exported EARK SIPs.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -167,6 +167,8 @@ InspectionPane.removeRepresentation=Remove representation
 documentation=Documentation
 InspectionPane.docsHelp.title=Drop files/folders here\nto add documentation
 InspectionPane.onDropDocs=Add documentation
+SimpleSipCreator.documentation=Adding documentation
+SimpleSipCreator.initZIP=Initializing zip file
 
 
 
