--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -169,6 +169,9 @@ InspectionPane.docsHelp.title=Drop files/folders here\nto add documentation
 InspectionPane.onDropDocs=Add documentation
 SimpleSipCreator.documentation=Adding documentation
 SimpleSipCreator.initZIP=Initializing zip file
+FileExplorerPane.alertAddFolder.content=Unable to add the folder "%s"\nsince "%s" has already been added.
+FileExplorerPane.alertAddFolder.title=Add folder
+FileExplorerPane.alertAddFolder.header=Unable to add folder
 
 
 
