Renamed old sipPerFolder icon and text to be used in the new SipsWithStructure association option.

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -113,8 +113,8 @@ association.sipSelection.description = Use this option to create a SIP for each 
 association.sipPerFile.title = One description item for each file under the selected folder(s)
 association.sipPerFile.description = Use this option to create one SIP for each file under the selected folder(s). This operation will create a set of SIPs equal to the number of files under the selected folder(s).
 
-association.sipPerFolder.title = One description item for each folder under the selected folder(s)
-association.sipPerFolder.description = Use this option to create a SIP for each folder under the selected folder(s). This operation will create a set of SIPs equal to the amount of folders under the selected folder(s) until the selected level.
+association.sipWithStructure.title = One description item for each folder under the selected folder(s)
+association.sipWithStructure.description = Use this option to create a SIP for each folder under the selected folder(s). This operation will create a set of SIPs equal to the amount of folders under the selected folder(s) until the selected level.
 
 metadata.singleFile.title = Load from a single file
 metadata.singleFile.description = Use this option to add to each SIP one metadata file of your choice. The selected file will be added to each of the created SIPs.
