--- a/src/main/resources/properties/styles.properties
+++ b/src/main/resources/properties/styles.properties
@@ -5,7 +5,7 @@ creationmodalprocessing.blackmagic = -fx-background-color: white;
 association.singleSip.icon = icons/singleSip.png
 association.sipSelection.icon = icons/sipPerSelection.png
 association.sipPerFile.icon = icons/sipPerFile.png
-association.sipPerFolder.icon = icons/sipPerFolder.png
+association.sipWithStructure.icon = icons/sipWithStructure.png
 metadata.singleFile.icon = icons/singleFile.png
 metadata.sameFolder.icon = icons/sameFolder.png
 metadata.diffFolder.icon = icons/diffFolder.png
